force-app/main/default/objects/Order_Invoice__c/Order_Invoice__c.object-meta.xml
<CustomObject>
    <label>Order Invoice</label>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>