force-app/main/default/objects/Order_Invoice__c/fields/Invoice_Data__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Data__c</fullName>
    <label>Invoice Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>