force-app/main/default/objects/Order_Invoice__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Invoice</fullName>
            </value>
            <value>
                <fullName>Accessories Invoice</fullName>
            </value>
            <value>
                <fullName>Other Charges Invoice</fullName>
            </value>
            <value>
                <fullName>Add-ons Invoice</fullName>
            </value>
            <value>
                <fullName>Merchandise Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>