force-app/main/default/objects/Order_Invoice__c/fields/Job_Card__c.field-meta.xml
<CustomField>
    <fullName>Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Order Invoices</relationshipLabel>
    <relationshipName>Order_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>