force-app/main/default/objects/Order_Invoice__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <label>Product Name</label>
    <type>TextArea</type>
</CustomField>