force-app/main/default/objects/Order_Invoice__c/fields/Preferred_seller__c.field-meta.xml
<CustomField>
    <fullName>Preferred_seller__c</fullName>
    <formula>Order__r.Dealer__r.Name</formula>
    <label>Preferred seller</label>
    <type>Text</type>
</CustomField>