force-app/main/default/objects/Order_Invoice__c/fields/RSA__c.field-meta.xml
<CustomField>
    <fullName>RSA__c</fullName>
    <formula>CONTAINS( Order_Name__c , &quot;Road Side Assistance&quot;)</formula>
    <label>RSA</label>
    <type>Checkbox</type>
</CustomField>