force-app/main/default/objects/Order_Invoice__c/fields/RSA_Activated_date__c.field-meta.xml
<CustomField>
    <fullName>RSA_Activated_date__c</fullName>
    <formula>CreatedDate + 1</formula>
    <label>RSA Activated Date</label>
    <type>Date</type>
</CustomField>