force-app/main/default/objects/Order_Invoice__c/listViews/All_Order_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Order_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Type__c</columns>
    <columns>Order__c</columns>
    <columns>RSA__c</columns>
    <columns>RSA_Activated_date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Order Invoices</label>
</ListView>